# OOP6

./: CMakeLists.txt  Dragon.cpp  Dragon.h  Elf.cpp  Elf.h  StrangeKnight cpp  StrangeKnight.cpp  StrangeKnight.h  factory.h  main.cpp  npc.cpp  npc.h  observers.h  tests.cpp
